# gdwf-current

./: .clang-format  CMakeLists.txt  Readme.md
logs/: log_to_dat.sh
src/: CMakeLists.txt  current.hpp  main.cpp
